# qft-graph

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  gnn-qft-plan.jsx  gnn-qft-proposal.docx  pyproject.toml  pyrightconfig.json  qft-graph.code-workspace
configs/: defaults.yaml
configs/lattice/: 16x16.yaml  32x32.yaml  8x8.yaml
configs/mc/: metropolis_phi4.yaml
configs/model/: hetero_gnn_base.yaml
configs/training/: energy_matching.yaml
notebooks/: 01_mc_validation.ipynb  02_graph_visualization.ipynb  03_train_colab.ipynb  04_critical_exponents.ipynb
paper/: .gitignore  Makefile  generate_figures.py  main.tex  references.bib
scripts/: evaluate.py  generate_mc_data.py  sweep.py  train.py
src/qft_graph/: __init__.py  config.py
src/qft_graph/actions/: base.py  phi4.py
src/qft_graph/analysis/: correlation.py  critical.py  phase_diagram.py  visualization.py
src/qft_graph/fields/: base.py  fermion.py  gauge.py  scalar.py
src/qft_graph/graphs/: builder.py  edge_types.py  node_types.py  transforms.py
src/qft_graph/lattice/: base.py  boundary.py  hypercubic.py
src/qft_graph/mc/: analysis.py  metropolis.py  observables.py  sampler.py
src/qft_graph/models/: hetero_gnn.py
src/qft_graph/training/: callbacks.py  (+3 more)
tests/: conftest.py
tests/test_actions/: test_phi4.py
tests/test_analysis/: test_critical.py
tests/test_fields/: test_scalar.py
tests/test_graphs/: test_builder.py
tests/test_lattice/: test_hypercubic.py
tests/test_mc/: test_metropolis.py  test_observables.py
tests/test_models/: test_hetero_gnn.py  test_message_passing.py
(+12 files in other folders)
