[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "qft-graph"
version = "0.1.0"
description = "Heterogeneous Graph Neural Networks for Quantum Field Theory"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "torch-geometric>=2.4",
    "numpy>=1.24",
    "omegaconf>=2.3",
    "matplotlib>=3.7",
    "tensorboard>=2.14",
    "scipy>=1.11",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"
